# MongoMessage

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
src/: __init__.py
src/api/routers/: auth.py  messenger_router.py  user_router.py
src/api/schemas/: auth_schema.py  message_schema.py  user_schema.py
src/core/: secure.py  settings.py
src/db/: mongo_db.py
src/models/: message_model.py  user_models.py
src/services/: chat_ws.py  message_service.py  user_service.py  websocket_logic.py
src/templates/: chat.html
